Fix icon alignment in quiz notice

--- a/assets/css/sensei-course-theme/notices.scss
+++ b/assets/css/sensei-course-theme/notices.scss
@@ -60,6 +60,10 @@ body.sensei-course-theme {
 		color: inherit;
 		display: flex;
 
+		&.sensei-course-theme__button.is-link {
+			display: flex;
+		}
+
 		&:active {
 			background-color: inherit;
 		}
